update: movement swagger
