# backend/internal/movement/transport/http/get_movement.go
@@ -10,34 +10,36 @@ import (
 )
 
 // GetMovementsByItemID godoc
-// @Summary Get movements by Item ID
-// @Description Get all inventory movements related to a specific item ID
+// @Summary Get movements by item ID
+// @Description Get all inventory movements for a specific item
 // @Tags Movements
 // @Accept json
 // @Produce json
-// @Param itemId path int true "Item ID"
-// @Success 200 {object} core.APIResponse{result=[]inventory-movement-processing_internal_movement_entity.Movement} "List of movements"
+// @Param id path int true "Item ID"
+// @Success 200 {object} core.APIResponse{result=[]object} "List of movements for the item"
 // @Failure 400 {object} core.APIResponse "Invalid item ID"
+// @Failure 404 {object} core.APIResponse "Item not found"
 // @Failure 500 {object} core.APIResponse "Internal server error"
-// @Router /v1/movements/{itemId}/movements [get]
+// @Router /v1/movements/item/{id} [get]
 func (h *Handler) GetMovementsByItemID() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		idStr := c.Param("id")
-
 		id, err := strconv.Atoi(idStr)
 		if err != nil {
 			core.WriteError(
-				c, common.ErrBadRequest("invalid item id format"),
+				c,
+				common.ErrBadRequest("invalid item id"),
 			)
 			return
 		}
-
-		movements, err := h.service.GetMovementsByItemID(c.Request.Context(), id)
+		movements, err := h.service.GetMovementsByItemID(
+			c.Request.Context(),
+			id,
+		)
 		if err != nil {
 			core.WriteError(c, err)
 			return
 		}
-
 		c.JSON(
 			http.StatusOK,
 			core.Success(movements),
